<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_background_servi"
    android:orientation="vertical"
    android:padding="10dp" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/text_view_1"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/classroom"
            android:textColor="@color/color_white"
            android:textSize="18sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="2dp"
            android:layout_height="fill_parent"
            android:background="@color/color_gray_transparent"
            android:gravity="center" />

        <TextView
            android:id="@+id/text_view_2"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/until"
            android:textColor="@color/color_white"
            android:textSize="18sp"
            android:textStyle="bold" />
    </LinearLayout>

    <ListView
        android:id="@+id/lst_available_rooms"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/cuadro"
        android:divider="@color/color_gray_transparent"
        android:dividerHeight=".5dp"
        android:padding="10dp" />
    
    <TextView
            android:id="@+id/txt_no_availables"
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:gravity="center"
            android:text="@string/no_available"
            android:textColor="@color/color_white"
            android:textSize="40sp"
            android:textStyle="italic"
            android:visibility="gone" />

</LinearLayout>